<resources>
    <string name="app_name">MyToDoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="remove">Remove</string>
    <string name="complete">Complete</string>
    <string name="error">A problem occured</string>
    <string name="clear_all">Clear All</string>
    <string name="success">Success</string>
    <string name="filter">FILTER</string>
    <string name="sort">SORT</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="deadline">Deadline</string>
    <string name="description">Description</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="form_valid_message">Please fill the required fields.</string>
    <string name="passwords_same">Passwords must be same</string>
    <string name="create">Create</string>
    <string name="create_todo_list">Create TO-DO List</string>
    <string name="create_todo_item">Create TO-DO Item</string>
    <string name="completed">Completed</string>
    <string name="not_completed">No Completed</string>
    <string name="expired">Expired</string>
    <string name="apply">Apply</string>
</resources>
