<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="44dp"
            android:layout_height="44dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_todo_list"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/bg_rectangle_gray_stroke_white_solid"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/name"
            android:textSize="16sp"
            app:met_hideUnderline="true" />

    </LinearLayout>


    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:text="@string/create"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_green_solid"/>

</LinearLayout>