<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/btnFilterClose"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:clickable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="80dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/colorDarkGray">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="12dp"
                                android:text="@string/filter"
                                android:textColor="@color/colorWhite"
                                android:textSize="18sp" />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/btnClearAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:padding="14dp"
                            android:text="@string/clear_all"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="NAME"
                            android:textColor="@color/colorWhite" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="vertical"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/bg_rectangle_gray_stroke_white_solid"
                            android:orientation="horizontal">

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/txtFilterName"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:hint="@string/name"
                                android:textSize="16sp"
                                app:met_hideUnderline="true" />

                        </LinearLayout>
                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="STATE"
                            android:textColor="@color/colorWhite" />
                    </LinearLayout>

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="60dp">


                                <CheckBox
                                    android:id="@+id/checkboxExpired"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/expired"
                                    android:textSize="16sp" />


                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="60dp">


                                <CheckBox
                                    android:id="@+id/checkboxNotCompleted"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/not_completed"
                                    android:textSize="16sp" />


                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="60dp">


                                <CheckBox
                                    android:id="@+id/checkboxCompleted"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/completed"
                                    android:textSize="16sp" />


                            </RelativeLayout>
                        </LinearLayout>
                    </ScrollView>



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorViewGray" />


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorWhite">

                    <TextView
                        android:id="@+id/btnApply"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:background="@drawable/bg_green_solid"
                        android:gravity="center"
                        android:text="@string/apply"
                        android:textColor="@color/colorWhite" />


                </RelativeLayout>

            </RelativeLayout>


        </android.support.v7.widget.CardView>

    </RelativeLayout>

</LinearLayout>