<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_todo_item"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </RelativeLayout>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/bg_rectangle_gray_stroke_white_solid"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:hint="@string/name"
                android:textSize="16sp"
                app:met_hideUnderline="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDeadline"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/bg_rectangle_gray_stroke_white_solid"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="16dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/calendar" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorViewLine" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/txtDeadline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/deadline"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="16sp"
                android:editable="false"
                android:focusable="false"
                app:met_hideUnderline="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginEnd="23dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_rectangle_gray_stroke_white_solid"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|left"
                app:met_maxCharacters="999"
                android:hint="@string/description"
                android:padding="16dp"
                android:textSize="16sp"
                app:met_hideUnderline="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginEnd="23dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:background="@drawable/bg_rectangle_gray_stroke_white_solid"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Dependency: "
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="4dp"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/create"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_green_solid"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

</LinearLayout>