<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:visibility="gone"
            android:layout_width="?actionBarSize"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/bg_rectangle_gray_stroke_white_solid">

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="12dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/mail"/>


        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:background="@color/colorViewLine"
            android:layout_height="match_parent"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etxtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:met_hideUnderline="true"
            android:hint="@string/email"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/bg_rectangle_gray_stroke_white_solid">

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/confirmpassword"/>


        </RelativeLayout>


        <View
            android:layout_width="1dp"
            android:background="@color/colorViewLine"
            android:layout_height="match_parent"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etxtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:met_hideUnderline="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="38dp">

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/create_new_account"/>


    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_green_solid"
        android:text="@string/sign_in"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"/>

</LinearLayout>